--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>BaiTapHam</title>
+    <title>BaiTapMang</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,14 +15,15 @@
 <body>
 
     <div class="container">
+
         <div class="accordion" id="accordionExample">
- <!-- BÀI 1: QUẢN LÝ TUYỂN SINH -->
+            <!-- BÀI 1: QUẢN LÝ TUYỂN SINH -->
             <div class="card">
                 <div class="card-header" id="headingOne">
                     <h2 class="mb-0">
                         <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse"
                             data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            QUẢN LÝ TUYỂN SINH
+                            BÀI 1: QUẢN LÝ TUYỂN SINH
                         </button>
                     </h2>
                 </div>
@@ -31,60 +32,51 @@
                     <div class="card card-body">
                         <div class="container">
                             <form class="w-75 py-1">
-                                <div class="form-row">
+                                <div class="form-row">                                
                                     <div class="form-group col-md-4">
-                                        <label for="diemChuan">Điểm chuẩn</label>
                                         <input type="number" class="form-control" id="diemChuan"
-                                            placeholder="Nhập điểm chuẩn" min='0' max="30">
-                                        <div class="invalid-feedback">Hãy nhập điểm chuẩn để tiếp tục</div>
+                                            placeholder="Nhập điểm chuẩn" min="0" max="30" >
                                     </div>
                                     <div class="form-group col-md-4">
-                                        <label for="khuVuc">Khu vực ưu tiên</label>
                                         <select id="khuVuc" class="form-control">
-                                            <option selected value=''>Chọn khu vực</option>
+                                            <option value='0'>Chọn khu vực ưu tiên</option>
                                             <option value='2'>A</option>
                                             <option value='1'>B</option>
                                             <option value='0.5'>C</option>
                                         </select>
                                     </div>
                                     <div class="form-group col-md-4">
-                                        <label for="doiTuong">Đối tượng ưu tiên</label>
                                         <select id="doiTuong" class="form-control">
-                                            <option selected value=''>Chọn đối tượng</option>
+                                            <option value='0'>Chọn đối tượng ưu tiên</option>
                                             <option value='2.5'>1</option>
                                             <option value='1.5'>2</option>
-                                            <option value='1'>3</option>
+                                            <option value='1'>3</option>                                    
                                         </select>
                                     </div>
-                                </div>
-                                <div class="form-row">
                                     <div class="form-group col-md-4">
-                                        <label for="diem1">Điểm thi môn 1</label>
-                                        <input type="number" class="form-control" id="diem1" placeholder="Nhập điểm thi"
-                                            min='0' max='10'>
+                                        <input type="number" class="form-control" id="diem1"
+                                            placeholder="Điểm thi môn thứ 1" min="0">
                                     </div>
                                     <div class="form-group col-md-4">
-                                        <label for="diem2">Điểm thi môn 2</label>
-                                        <input type="number" class="form-control" id="diem2" placeholder="Nhập điểm thi"
-                                            min='0' max='10'>
+                                        <input type="number" class="form-control" id="diem2"
+                                            placeholder="Điểm thi môn thứ 2" min="0">
                                     </div>
                                     <div class="form-group col-md-4">
-                                        <label for="diem3">Điểm thi môn 3</label>
-                                        <input type="number" class="form-control" id="diem3" placeholder="Nhập điểm thi"
-                                            min='0' max='10'>
+                                        <input type="number" class="form-control" id="diem3"
+                                            placeholder="Điểm thi môn thứ 3" min="0">
                                     </div>
+                                    
                                 </div>
                                 <button type="button" class="btn btn-primary" id="btnCalcPoint">Kết quả</button>
                                 <div class="pt-3">
-                                    <p class="alert alert-danger" id="result"></p>
+                                    <p class="alert alert-danger" id="result1"></p>
                                 </div>
                             </form>
-
                         </div>
                     </div>
                 </div>
             </div>
-<!-- BÀI 2: TÍNH TIỀN ĐIỆN -->            
+            <!-- BÀI 2: TÍNH TIỀN ĐIỆN -->
             <div class="card">
                 <div class="card-header" id="headingTwo">
                     <h2 class="mb-0">
@@ -95,7 +87,7 @@
                     </h2>
                 </div>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                    <div class="card-body">                        
+                    <div class="card-body">
                         <div class="container">
                             <form class="w-75 py-1">
                                 <div class="form-row">
@@ -119,7 +111,7 @@
                     </div>
                 </div>
             </div>
-<!-- BÀI 3: TÍNH THUẾ THU NHẬP -->
+            <!-- BÀI 3: TÍNH THUẾ THU NHẬP -->
             <div class="card">
                 <div class="card-header" id="headingThree">
                     <h2 class="mb-0">
@@ -131,7 +123,7 @@
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
                     <div class="card card-body">
-                        
+
                         <div class="container">
                             <form class="w-75 py-1">
                                 <div class="form-row">
@@ -157,7 +149,7 @@
                     </div>
                 </div>
             </div>
-<!-- BÀI 4: TÍNH TIỀN CÁP -->            
+            <!-- BÀI 4: TÍNH TIỀN CÁP -->
             <div class="card">
                 <div class="card-header" id="headingFour">
                     <h2 class="mb-0">
@@ -168,7 +160,7 @@
                     </h2>
                 </div>
                 <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-                    <div class="card card-body">                        
+                    <div class="card card-body">
                         <div class="container">
                             <form class="w-75 py-1">
                                 <div class="form-row">
@@ -226,10 +218,11 @@
 
 
         <!-- JS Code -->
-        <script src="./js/tinhDiem.js"></script>
+        <script src="./js/quanLyTuyenSinh.js"></script>
         <script src="./js/tinhTienDien.js"></script>
         <script src="./js/tinhTienThue.js"></script>
         <script src="./js/tinhTienCap.js"></script>
+
 
 
 
